--- a/OneInc-Server/docker-compose.yaml
+++ b/OneInc-Server/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
         environment:
             ASPNETCORE_URLS: "http://+:80;https://+:443"
             ASPNETCORE_HTTPS_PORT: "32771"
-            ALLOWED_WEBCLIENT_ORIGINS: "http://localhost:5173/"
+            ALLOWED_WEBCLIENT_ORIGINS: "http://localhost:5173"
         volumes:
         - ${APPDATA}\microsoft\UserSecrets\:/root/.microsoft/usersecrets
         - ${USERPROFILE}\AppData\Roaming\ASP.NET\Https:/root/.aspnet/https/
